[package]
name = "blockchain-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
sha2 = "0.9.8"
libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
log = "0.4"
pretty_env_logger = "0.4.0"
tokio = { version = "1.17.0", features = ["full"] }
once_cell = "1.10.0"